# OpenGL_Clock

./: CMakeLists.txt  LICENSE
src/: Color.cpp  Color.h  Shapes.cpp  Shapes.h  main.cpp
